2005-08-01  Frank Ch. Eigler  <fche@redhat.com>

	* librelay.c: Correct fwrite api usage.
	* all: Correct copyright holder name.

2005-08-01  Martin Hunt  <hunt@redhat.com>

	* librelay.h: Get structs and enums from 
	../transport/transport_msgs.h  to eliminate duplication.

	* librelay.c (send_request): Retry if send fails.
	(open_relayfs_files): Use fopen() instead of open() for the 
	percpu tmpfiles.
	(request_last_buffers): Just send cpu number for STP_BUF_INFO request.
	(reader_thread): Ditto.
	(process_subbufs): Use fwrite_unlocked() instead of write().
	(sigchld): Removed.
	(init_stp): Go back to using system() instead of fork and exec
	to load module. When done, send a TRANSPORT_INFO request.
	(cleanup_and_exit): Change parameter to simple flag to 
	indicate if the module needs removing. 
	(sigproc): Remove complicated logic and just send STP_EXIT.
	(stp_main_loop): When receiving STP_TRANSPORT_INFO, set
	the local params and reply with a STP_START.  When
	receiving STP_START, there was an error, so cleanup and exit.
	
	* stpd.c (main): Added new options to set number of
	buffers and their size.

2005-07-29  Roland McGrath  <roland@redhat.com>

	* librelay.c (process_subbufs): Use unsigned for I.
	(sigproc): Add  __attribute__((unused)) on parameter.
	(sigchld): Likewise.  Avoid shadowing global variable name.
	(stp_main_loop): Add a cast.

2005-07-18  Martin Hunt  <hunt@redhat.com>

	* stp_merge.c (main): Fix dropped count calculation.

2005-07-14  Tom Zanussi  <zanussi@us.ibm.com>

	* librelay.c (reader_thread): Add missing pthread_mutex_lock

2005-07-14  Frank Ch. Eigler  <fche@redhat.com>

	* stpd.c (main): Pass !quiet mode to init_stp().
	* librelay.c (init_relayfs): Be quiet if !print_totals.

2005-07-13  Martin Hunt  <hunt@redhat.com>

	* stpd.c (usage): Fix usage string.

	* librelay.c (init_stp): Change last arg to NULL, not 0.

2005-07-08  Martin Hunt  <hunt@redhat.com>

	* librelay.c (sigchld): Signal handler to detect